exports[`ReactHtmlStringRootProvider > render > should render virtual DOM to HTML string 1`] = `
[
  [
    "body",
    "<div id=\\"test\\" class=\\"container\\" style=\\"width:100%;height:50px\\" data-id=\\"1\\"><img href=\\"./test.img\\" data-id=\\"2\\"/>hello, world!</div>"
  ]
]
`;

exports[`ReactHtmlStringRootProvider > update > should render patched virtual DOM to HTML string 1`] = `
[
  "body",
  "<div id=\\"test\\" class=\\"container newClass\\" style=\\"display:inline-block;height:50px\\" data-id=\\"1\\">New <img href=\\"./test.img\\" style=\\"color:red\\" data-id=\\"2\\"/>world~</div>"
]
`;
